# troi-recommendation-playground

./: .gitignore  .travis.yml  Dockerfile  README.md  TODO  area_random_tracks.py  compare.py  config.py.sample  graph.py  nonsense_example.py  parse.py  pyproject.toml  recommended_recordings.py  requirements.txt  requirements_test.txt  run-docker.sh  setup.py  similar.py  test.py  test.sh  test_print.py  test_set_parameter_generator.py  troi.py
.github/workflows/: cd.yml  ci.yml  python-app.yml
docker/: endless.py
docs/: conf.py  elements.rst  entities.rst  index.rst  installation.rst  introduction.rst  lb_radio.rst  patches.rst  requirements.txt  troi-arguments.rst  user-guide.rst
docs/dev/: index.rst
docs/elements/: index.rst  listenbrainz.rst  musicbrainz.rst
patches/: area_random_recordings.py  area_random_tracks.py  daily_jams.py  lb_recommended_recordings.py  recommended_recordings.py
tests/: test_entities.py  test_filters.py  test_operations.py  test_parser.py  test_playlist.py  test_playlist_from_xspf_patch.py  test_plist.py  test_sequential_artist_filter.py  test_splitter.py  test_tag_utils.py  test_utils.py  test_xspf_element.py  test_xspf_lookup.py
tests/listenbrainz/: test_stats.py
tests/musicbrainz/: test_genre_lookup.py  test_mbid_mapping.py  test_recording_lookup.py  test_related_artist_credits.py
tests/tools/: test_area_lookup.py
troi/: __init__.py  cli.py  core.py  filters.py  http_request.py  logging.py  logging_utils.py  loops.py  operations.py  parse_prompt.py  parser.py  patch.py  periodic_jams_local.py  playlist.py  plist.py  print_recording.py  recording_search_service.py  service.py  similar_recordings.py  sorts.py  splitter.py  utils.py
troi/acousticbrainz/: annoy.py  bpm_lookup.py  mood_lookup.py
troi/content_resolver/: artist_search.py  cli.py  content_resolver.py  database.py  duplicates.py  fuzzy_index.py  lb_radio.py  metadata_lookup.py  playlist.py  py_sonic_fix.py  subsonic.py  tag_search.py  top_tags.py  unresolved_recording.py  utils.py
troi/datafilter/: __init__.py
troi/datasource/: __init__.py
troi/internal/: README.md  top_discoveries_for_year.py  top_missed_recordings_for_year.py  top_new_recordings_you_listened_to_for_year.py  top_recordings_for_year.py  top_sitewide_recordings_for_year.py  yim_patch_runner.py
troi/listenbrainz/: area_random_recordings.py  dataset_fetcher.py  feedback.py  fetch_listens.py  graph.py  listens.py  recs.py  similar_recordings.py  similar_users.py  spotify_audio_features.py  spotify_id_lookup.py  stats.py  user.py  yim_user.py
troi/local/: periodic_jams_local.py  recording_resolver.py
troi/lookup/: __init__.py
troi/musicbrainz/: artist_credit_id_lookup.py  artist_credit_lookup.py  artist_lookup.py  genre_lookup.py  mbid_mapping.py  mbid_reader.py  msb_mapping.py  recording.py  recording_lookup.py  related_artist_credits.py  year_lookup.py
troi/patches/: ab_similar_recordings.py  ai_jams.py  area_random_recordings.py  artist_radio.py  daily_jams.py  daily_similar_users.py  festival_playlist.py  lb_radio.py  load_audio_features.py  new_jams.py  patch_runner.py  periodic_jams.py  periodic_jams_local.py  playlist_from_listenbrainz.py  playlist_from_mbids.py  playlist_from_ms.py  playlist_from_xspf.py  recs_to_playlist.py  tag_radio.py  (+16 more)
(+73 files in other folders)
